feat: 新增 Forge/NeoForge 加载器自动安装